# goodtools-home

./: .gitignore  compose.app.yml  compose.orchestrator.yml  docker-compose-postgres.yml  docker-compose.dev.yml
backend/: Makefile  alembic.ini  backend.Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0aeaeb1185a2_.py  14a3c1b31d42_add_indexes_on_invoices.py  161bb3e09904_init_database.py  5efe8d6f622e_add_invoice_search.py  Untitled  a9b85fc8c11f_add_index_andunique_on_external_id.py
backend/application/containers/: appContainer.py  invoiceContainer.py  ocrContainer.py  openAIContainer.py  userContainer.py  workflowContainer.py
backend/application/dtos/: aws.py  baseDto.py  documentDto.py  gateway.py  invoiceDto.py  ocrDto.py  workflow.py
backend/application/facades/: invoiceFacade.py  workflowFacade.py
backend/application/orchestrator/: syncPennyLaneWorkflow.py  syncUpdatInvoiceToPennylane.py
backend/application/ports/: StorageGateway.py  baseRepository.py  baseUsecase.py  cache.py  documentRepository.py  invoiceRepository.py  workflowRepository.py
backend/domain/mappers/: documentMapper.py  invoiceMapper.py
backend/domain/models/: baseModel.py  columns.py  document.py  invoice.py  sql.py  user.py  workflow.py
backend/domain/ports/: documentRepository.py  invoiceRepository.py  openaiGateway.py
backend/domain/services/: invoiceService.py  ocrService.py  openaiService.py
backend/infrastructure/: router.py  server.py
backend/infrastructure/cache/: redis.py
backend/scripts/: generate_sql_models.py
(+190 files in other folders)
