[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.2",
    "fastapi>=0.121.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "xai-sdk>=1.4.0",
]
